Add logger headers

--- a/src/meson.build
+++ b/src/meson.build
@@ -4,7 +4,8 @@ ledcubebackend_sources = [
   'YAMLConvertors.cpp',
   'SocketWrapper.cpp',
   'SocketHandler.cpp',
-  'Logger.cpp'
+  'Logger.cpp',
+  'LoggerSettings.cpp'
 ]
 
 ledcubebackend_deps = [
